; ModuleID = '/home/carl/AnghaBench/git/extr_string-list.c_string_list_find_insert_index.c'
source_filename = "/home/carl/AnghaBench/git/extr_string-list.c_string_list_find_insert_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @string_list_find_insert_index(%struct.string_list* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.string_list*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.string_list* %0, %struct.string_list** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.string_list*, %struct.string_list** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @get_entry_index(%struct.string_list* %9, i8* %10, i32* %7)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %14
  %18 = load i32, i32* %8, align 4
  br label %20

19:                                               ; preds = %14
  br label %20

20:                                               ; preds = %19, %17
  %21 = phi i32 [ %18, %17 ], [ 0, %19 ]
  %22 = sub nsw i32 -1, %21
  store i32 %22, i32* %8, align 4
  br label %23

23:                                               ; preds = %20, %3
  %24 = load i32, i32* %8, align 4
  ret i32 %24
}

declare dso_local i32 @get_entry_index(%struct.string_list*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
